--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.4",
     "razorpay": "^2.9.4",
     "stripe": "^16.8.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "vite": "^6.0.5"
   }
 }
